# case3_mysql

./: .gitignore  case3_database_.py  crud.py  database.py  db_helper.py  dependencies.py  main.py  pyproject.toml  schemas.py  settings.py  world_travel.mwb  world_travel.mwb.bak
.github/: copilot-instructions.md
auth/: __init__.py  views.py
auth/basic/: views.py
customer/: crud.py
hotel/: crud.py  views.py
manager/: crud.py
order/: crud.py  views.py
templates/: addhotel.html  addtour.html  customer.html  customer_profile.html  hotel.html  index.html  login.html  order.html  registration.html  tour.html  tours.html  update_tours.html
tour/: crud.py  dependency.py  views.py
