[project]
name = "case3-mysql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.123.5",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.12.5",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
